# Star-Arm-102

./: README.md  README_EN.md
Hardware/: README.md
Hardware/assembly/: README.md
Hardware/cad/: README.md  Star Arm102-LD.DWG
Hardware/parts/: Star Arm 102-LD_BOM.xlsx
Lerobot/: README.md  stararm102.md  stararm102_en.md
Lerobot/fashionstar-lerobot-robot-stararm102/: README.md
Lerobot/fashionstar-lerobot-robot-stararm102/lerobot_robot_stararm102/: config_stararm102_follower.py
Lerobot/fashionstar-lerobot-teleoperator-stararm102/: README.md
Lerobot/fashionstar-lerobot-teleoperator-stararm102/lerobot_teleoperator_stararm102/: __init__.py  config_stararm102_leader.py  stararm102_leader.py
Lerobot/lerobot-robot-stararm102/: setup.py
Lerobot/lerobot-robot-stararm102/lerobot_robot_stararm102/: __init__.py  stararm102_follower.py
Lerobot/lerobot-teleoperator-stararm102/: setup.py
Python_SDK/: README.md  stararm102_ro.py
ROS2_HUMBLE/: README.md
ROS2_HUMBLE/src/arm_moveit_read/: CMakeLists.txt  package.xml
ROS2_HUMBLE/src/arm_moveit_read/include/: arm_moveit_read.hpp
ROS2_HUMBLE/src/arm_moveit_read/src/: arm_moveit_read.cpp
ROS2_HUMBLE/src/arm_moveit_write/: CMakeLists.txt  package.xml
ROS2_HUMBLE/src/arm_moveit_write/src/: arm_moveit_write.cpp  topic_publisher.cpp
ROS2_HUMBLE/src/arm_read_pose/: CMakeLists.txt  package.xml
ROS2_HUMBLE/src/arm_read_pose/include/: arm_read_pose.hpp
ROS2_HUMBLE/src/arm_read_pose/src/: arm_read_pose.cpp
ROS2_HUMBLE/src/cello_controller/: package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/cello_controller/cello_controller/: cello_controller.py
ROS2_HUMBLE/src/cello_description/: CMakeLists.txt  package.xml  setup.py
ROS2_HUMBLE/src/cello_description/launch/: display_rviz.launch.py  robo_state_publisher.launch.py  rviz_demo.launch.py
ROS2_HUMBLE/src/cello_description/urdf/: cello_description.urdf
ROS2_HUMBLE/src/cello_gazebo/: package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/cello_gazebo/config/: cello_gazebo.urdf.xacro
ROS2_HUMBLE/src/cello_gazebo/launch/: cello_gazebo.launch.py
ROS2_HUMBLE/src/cello_gazebo/meshes/: link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7_left.STL
ROS2_HUMBLE/src/cello_gazebo/urdf/: cello_gazebo.urdf  gazebo_configs.urdf.xacro
ROS2_HUMBLE/src/cello_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ROS2_HUMBLE/src/cello_moveit_config/config/: cello_description.ros2_control.xacro  cello_description.srdf  cello_description.urdf.xacro  hello_moveit.yaml  initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
ROS2_HUMBLE/src/cello_moveit_config/launch/: actual_robot_demo.launch.py  arm_moveit_read.launch.py  arm_moveit_write.launch.py  arm_read_pose.launch.py  demo.launch.py  driver.launch.py  gazebo_demo.launch.py  hello_moveit.launch.py  move_group.launch.py  move_group_rviz.launch.py  moveit_rviz.launch.py  moveit_write_read.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ROS2_HUMBLE/src/robo_driver/: setup.py
ROS2_HUMBLE/src/robo_driver/robo_driver/: robo_driver.py
ROS2_HUMBLE/src/robo_interfaces/: CMakeLists.txt  package.xml
ROS2_HUMBLE/src/robo_interfaces/msg/: GripperCommand.msg  PositionOrientation.msg  SetAngle.msg
ROS2_HUMBLE/src/robo_interfaces/srv/: ReadData.srv  WriteData.srv
ROS2_HUMBLE/src/ros2_bag_recorder/: CMakeLists.txt  package.xml
ROS2_HUMBLE/src/ros2_bag_recorder/src/: bag_recorder.cpp
ROS2_HUMBLE/src/stararm102_controller/: package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/stararm102_controller/stararm102_controller/: stararm102_controller.py
ROS2_HUMBLE/src/stararm102_description/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/stararm102_description/launch/: display_rviz.launch.py  robo_state_publisher.launch.py
ROS2_HUMBLE/src/stararm102_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7_left.STL  link7_right.STL
ROS2_HUMBLE/src/stararm102_description/urdf/: stararm102_description.urdf
ROS2_HUMBLE/src/stararm102_gazebo/: package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/stararm102_gazebo/config/: stararm102_gazebo.urdf.xacro
ROS2_HUMBLE/src/stararm102_gazebo/launch/: stararm102_gazebo.launch.py
ROS2_HUMBLE/src/stararm102_gazebo/meshes/: base_link.STL  link1.STL  link2.STL  link5.STL  link6.STL  link7_left.STL  link7_right.STL
ROS2_HUMBLE/src/stararm102_gazebo/urdf/: gazebo_configs.urdf.xacro  stararm102_gazebo.urdf
ROS2_HUMBLE/src/stararm102_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ROS2_HUMBLE/src/stararm102_moveit_config/config/: arm_read_pose.yaml  hello_moveit.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  stararm102_description.ros2_control.xacro  stararm102_description.srdf  stararm102_description.urdf.xacro
ROS2_HUMBLE/src/stararm102_moveit_config/launch/: actual_robot_demo.launch.py  arm_moveit_read.launch.py  arm_moveit_write.launch.py  arm_read_pose.launch.py  demo.launch.py  driver.launch.py  gazebo_demo.launch.py  hello_moveit.launch.py  move_group.launch.py  move_group_rviz.launch.py  moveit_rviz.launch.py  moveit_write_read.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ROS2_HUMBLE/src/viola_controller/: package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/viola_controller/viola_controller/: viola_controller.py
ROS2_HUMBLE/src/viola_description/: CMakeLists.txt  package.xml  setup.py
ROS2_HUMBLE/src/viola_description/launch/: display_rviz.launch.py  robo_state_publisher.launch.py  rviz_demo.launch.py
ROS2_HUMBLE/src/viola_description/meshes/: link4.STL  link7_left.STL
ROS2_HUMBLE/src/viola_gazebo/: package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/viola_gazebo/meshes/: link1.STL  (+6 more)
ROS2_HUMBLE/src/viola_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+30 files in other folders)
